# lumberjack-legends

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  DEPLOYMENT.md  DEPLOY_RENDER.md  DOCKER.md  Dockerfile  INTEGRATION.md  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.combined.conf  openapi.yaml  package.json  render-preflight.sh  render.yaml  tailwind.config.ts  test-deployment.sh
.github/workflows/: README.md  ci-cd.yml
backend/: .dockerignore  .gitignore  DATABASE.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml
backend/app/: auth_utils.py  database.py  db.py  db_models.py  main.py  models.py  seed.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_leaderboards.py
backend/tests_integration/: README.md  __init__.py  conftest.py  test_auth_integration.py  test_end_to_end.py  test_game_integration.py  test_leaderboard_integration.py
frontend/: .env.development  .env.production  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css
frontend/src/contexts/: AuthContext.tsx  GameContext.test.tsx  GameContext.tsx
frontend/src/hooks/: usePyodide.test.ts  usePyodide.ts
frontend/src/lib/: score.test.ts  score.ts
frontend/src/pages/: AuthPage.tsx  CodeExamplesPage.tsx  Index.tsx  LeaderboardPage.tsx  NotFound.tsx
frontend/src/services/: api.ts  (+1 more)
src/: App.tsx
src/contexts/: AuthContext.test.tsx  AuthContext.tsx  GameContext.test.tsx
src/pages/: GamePage.tsx  Index.tsx
src/services/: mockApi.test.ts  mockApi.ts
(+13 files in other folders)
