[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.124.4",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "uvicorn[standard]>=0.38.0",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
