[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.124.4",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.38.0",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
